--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages. Now to make this thing work!</p>
+	<h1>This page is under construction</h1>
 </body>
 
 </html>
