--- a/index.html
+++ b/index.html
@@ -1,9 +1,170 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
+	<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/styles/styles.css">
+
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/regular.css" integrity="sha384-tYZB+BP2inzRg01pQhSlW4Tloc0ULXYGiBaf5kSB5Tb3+l84bJy+PKerqziKz3iv" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/light.css" integrity="sha384-PWGGmWk9+xVydf1Gzso0ouaikBBKLu4nCY52q+tBUMq5iXmRhpgTuDkjbtxZ1rXT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-ZDxYpspDwfEsC0ZJDb74i/Rqjb1CnX3a69Dz9vXv4PvvlTEkgMI02TATTRNJoZ06" crossorigin="anonymous">
+
+
+    <title>Chad Harbig | Bodybuilding.com</title>
+
+    <style>
+    </style>
+</head>
 
 <body>
-	<h1>Hello World</h1>
-	<p>I'm hosted with GitHub Pages. Now to make this thing work!</p>
+    <div class="container-fluid background">
+        <div class="container-fluid wrapper">
+
+            <div class="row topnav fixed-top">
+                <div class="col-sm-12 col-md-4">
+                    <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
+                </div>
+                <div class="col-sm-12 col-md-8">
+                    <div class="nav-links">
+                        <a href="/work.html">Work</a>
+                        <a href="/files/CH_Resume.pdf">Resume</a>
+                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="jumbotron" id="bbcom_main">
+                <!-- <h1>Hello, world!</h1> -->
+            </div>
+
+            <div class="container">
+                <div class="row services justify-content-md-center text-center">
+                    <div class="col-sm-12">
+                        <h2 class="text-center">Things I'm great at</h2>
+                        <p>This is an awesome description</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/icons/leader.png">
+                        <h5>Product Strategy</h5>
+                        <p></p>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/icons/architecture.png">
+                        <h5>Team Leadership</h5>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/icons/strategy.png">
+                        <h5>Experience Design</h5>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/icons/architecture.png">
+                        <h5>Ecommerce Design</h5>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/icons/leader.png">
+                        <h5>Product Research</h5>
+                        <p></p>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="/images/icons/strategy.png">
+                        <h5>Info Architecture</h5>
+                    </div>
+                </div>
+                <div class="row topnav fixed-top">
+                    <div class="col-sm-12 col-md-4">
+                        <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
+                    </div>
+                    <div class="col-sm-12 col-md-8">
+                        <div class="nav-links">
+                            <a href="/work.html">Work</a>
+                            <a href="/files/CH_Resume.pdf">Resume</a>
+                            <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row frame quote justify-content-center">
+                    <div class="col-sm-12">
+                        <p>“Our techs religously use inSSIDer to ensure that customers are left with the best experience possible.”<br>
+                        </p>
+                        <h5>- Gary M., Sr. Director of Technical Operations
+                        </h5>
+                    </div>
+                </div>
+                <div class="row gallery justify-content-sm-center text-center">
+                    <div class="col col-sm-12">
+                        <h2>Sample Projects</h2>
+                        <p>This is an awesome description</p>
+                    </div>
+                    <div class="col col-xs-12 col-sm-6 col-md-4">
+                        <div class="mask"><a href="/work/inssider.html">
+                            <img src="/images/projects/inssider/inssider_thumb.jpg">
+                            <h5>inssider tech</h5>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col col-sm-6 col-md-4">
+                        <div class="mask"><a href="/work/bodybuilding.html">
+                            <img src="/images/tiger+square.jpg">
+                            <h5>bodybuilding.com</h5>
+                                    </a>
+                        </div>
+                    </div>
+                    <div class="col col-sm-6 col-md-4">
+                        <div class="mask"><a href="/work/gigmob.html">
+                            <img src="/images/projects/gigmob/gigmob_thumb.jpg">
+                            <h5>gigmob</h5>
+                                    </a>
+                        </div>
+                    </div>
+                    <div class="col col-sm-6 col-md-4">
+                        <div class="mask"><a href="/work/metageek.html">
+                            <img src="/images/tiger+square.jpg">
+                            <h5>metageek.com</h5>
+                                    </a>
+                        </div>
+                    </div>
+                    <div class="col col-sm-6 col-md-4">
+                        <div class="mask"><a href="/work/idearoom.html">
+                            <img src="/images/projects/idearoom/idearoom_thumb.jpg">
+                            <h5>idearoom</h5>
+                                    </a>
+                        </div>
+                    </div>
+                    <div class="col col-sm-6 col-md-4">
+                        <div class="mask"><a href="/work/tvcc.html">
+                            <img src="/images/projects/tvcc/tvcc_thumb.jpg">
+                            <h5>tvcc</h5>
+                                    </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row frame quote justify-content-center">
+                <div class="col-sm-12">
+                    <p>“Our techs religously use inSSIDer to ensure that customers are left with the best experience possible.”<br>
+                    </p>
+                    <h5>- Gary M., Sr. Director of Technical Operations
+                    </h5>
+                </div>
+            </div>
+            <div class="footer">
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JQuery -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- Popper.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 </body>
 
 </html>
