Updated title on index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -17,9 +17,11 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-ZDxYpspDwfEsC0ZJDb74i/Rqjb1CnX3a69Dz9vXv4PvvlTEkgMI02TATTRNJoZ06" crossorigin="anonymous">
 
 
-    <title>Chad Harbig | Bodybuilding.com</title>
+    <title>Chad Harbig | Product Leader | UX Specialist</title>
 
     <style>
+
+
     </style>
 </head>
 
@@ -110,7 +112,7 @@
                     </div>
                     <div class="col col-sm-6 col-md-4">
                         <div class="mask"><a href="/work/bodybuilding.html">
-                            <img src="/images/tiger+square.jpg">
+                            <img src="/images/projects/bbcom/bbcom_thumb.jpg">
                             <h5>bodybuilding.com</h5>
                                     </a>
                         </div>
