Updated "next" link on MetaGeek page

--- a/work/metageek.html
+++ b/work/metageek.html
@@ -79,7 +79,7 @@
             <div class="row summary">
                 <div class="col-sm-12 col-md-7 col-lg-8">
                     <h4>Background</h4>
-                    <p>MetaGeek creates software and hardware tools that help professionals evaluate and optimize their wireless networks. I was brought in to improve the user experience of MetaGeek’s existing tools and to help them identify opportunities for innovation based on customer feedback. After evaluating MetaGeek’s sales history and industry trends, I recognized a possible gap in the market for solutions to help Internet Service Providers deal with increasingly complex residential Wi-Fi networks and related impacts on customer satisfaction.</p>
+                    <p></p>
                 </div>
                 <div class="d-none d-md-block col-md-4 offset-md-1 col-lg-3 outcomes">
                     <h5>My Role</h5>
@@ -141,7 +141,7 @@
                     <h5>Shopify Cart Experience</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>-</p>
+                    <p>The site redesign included deployment of a new Shopify cart experience. In addition to design and implementation of the cart, I was responsible for I worked closely with MetaGeek's Operations team and outside </p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/metageek/metageek_cart.jpg">
@@ -162,7 +162,7 @@
                 <div class="row next justify-content-center">
                     <div class="col-sm-">
                         <p>Next Case Study</p>
-                        <h3>A Modern Landmark in small town idaho <i class="far fa-arrow-right"></i></h3>
+                        <h3>A Better Way To Work With Wood<i class="far fa-arrow-right"></i></h3>
                     </div>
                 </div>
             </a>
