--- a/work/idearoom.html
+++ b/work/idearoom.html
@@ -142,7 +142,7 @@
                     <h5>In-App Purchasing</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>IdeaRoom allows customers to browse and purchase from a large collection of woodworking ideas, directly from the app. </p>
+                    <p>IdeaRoom allows customers to browse and purchase from a large collection of woodworking ideas, directly from the app. Ideas are available in a variety of styles from many designers and leading publications.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/idearoom/idearoom_shop.jpg">
