--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="refresh" content="0; URL='http://www.chadharbig.com/work.html'" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
@@ -17,8 +18,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-ZDxYpspDwfEsC0ZJDb74i/Rqjb1CnX3a69Dz9vXv4PvvlTEkgMI02TATTRNJoZ06" crossorigin="anonymous">
 
 
-    <title>Chad Harbig | Product Leader | UX Specialist</title>
-
+    <title>Chad Harbig | Product Consultant | UX Architect</title>
     <style>
 
 
