--- a/work.html
+++ b/work.html
@@ -22,10 +22,8 @@
     <title>Chad Harbig | Bodybuilding.com</title>
 
     <style>
-        .background,
-        .wrapper {
-            height: 100% !important;
-        }
+
+
     </style>
 </head>
 
@@ -45,62 +43,67 @@
                 </div>
             </div>
             <br>
-            <div class="container-fluid" style="max-width: 1200px; margin-top: 80px;">
-                <div class="row gallery justify-content-sm-center text-center">
-                    <div class="col col-sm-12">
-                        <h2>Case Studies</h2>
-                        <!--
-                        <p>Descriptive Text</p>
+            <div class="row gallery">
+                <div class="col col-sm-12 text-center">
+                    <h2>Case Studies</h2>
+                    <!--
+                    <p>Descriptive Text</p>
 -->
-                    </div>
-                    <div class="col col-xs-12 col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/inssider.html">
-                            <img src="/images/projects/inssider/inssider_thumb.jpg">
-                            <h5>inssider tech</h5>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/bodybuilding.html">
-                            <img src="/images/projects/bbcom/bbcom_thumb.jpg">
-                            <h5>bodybuilding.com</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/gigmob.html">
-                            <img src="/images/projects/gigmob/gigmob_thumb.jpg">
-                            <h5>gigmob</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/metageek.html">
-                            <img src="/images/projects/metageek/metageek_thumb.jpg">
-                            <h5>metageek.com</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/idearoom.html">
-                            <img src="/images/projects/idearoom/idearoom_thumb.jpg">
-                            <h5>idearoom</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/tvcc.html">
-                            <img src="/images/projects/tvcc/tvcc_thumb.jpg">
-                            <h5>Treasure Valley Community College</h5>
-                                    </a>
-                        </div>
-                    </div>
                 </div>
-
+                <div class="col col-sm-12 col-md-6">
+                    <a href="/work/inssider.html">
+                        <div class="mask">
+                            <img src="/images/projects/inssider/inssider_thumb.jpg">
+                        </div>
+                        <h4>inssider tech</h4>
+                    </a>
+                </div>
+                <div class="col col-sm-12 col-md-6">
+                    <a href="/work/bodybuilding.html">
+                        <div class="mask">
+                            <img src="/images/projects/bbcom/bbcom_thumb.jpg">
+                        </div>
+                        <h4>bodybuilding.com</h4>
+                    </a>
+                </div>
+                <div class="col col-sm-12 col-md-6">
+                    <a href="/work/metageek.html">
+                        <div class="mask">
+                            <img src="/images/projects/metageek/metageek_thumb.jpg">
+                        </div>
+                        <h4>metageek.com</h4>
+                    </a>
+                </div>
+                <div class="col col-sm-12 col-md-6">
+                    <a href="/work/gigmob.html">
+                        <div class="mask">
+                            <img src="/images/projects/gigmob/gigmob_thumb.jpg">
+                        </div>
+                        <h4>gigmob</h4>
+                    </a>
+                </div>
+                <div class="col col-sm-12 col-md-6">
+                    <a href="/work/idearoom.html">
+                        <div class="mask">
+                            <img src="/images/projects/idearoom/idearoom_thumb.jpg">
+                        </div>
+                        <h4>idearoom</h4>
+                    </a>
+                </div>
+                <div class="col col-sm-12 col-md-6">
+                    <a href="/work/tvcc.html">
+                        <div class="mask">
+                            <img src="/images/projects/tvcc/tvcc_thumb.jpg">
+                        </div>
+                        <h4>Treasure Valley Community College</h4>
+                    </a>
+                </div>
             </div>
 
         </div>
+
     </div>
+
 
     <!-- Bootstrap JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
