Seriously fixed the responsiveness on 'Work' this time

--- a/work.html
+++ b/work.html
@@ -22,8 +22,6 @@
     <title>Chad Harbig | Bodybuilding.com</title>
 
     <style>
-
-
     </style>
 </head>
 
@@ -44,13 +42,13 @@
             </div>
             <br>
             <div class="row gallery">
-                <div class="col col-sm-12 text-center">
+                <div class="col-sm-12 text-center">
                     <h2>Case Studies</h2>
                     <!--
                     <p>Descriptive Text</p>
 -->
                 </div>
-                <div class="col col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <a href="/work/inssider.html">
                         <div class="mask">
                             <img src="/images/projects/inssider/inssider_thumb.jpg">
@@ -58,7 +56,7 @@
                         <h4>inssider tech</h4>
                     </a>
                 </div>
-                <div class="col col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <a href="/work/bodybuilding.html">
                         <div class="mask">
                             <img src="/images/projects/bbcom/bbcom_thumb.jpg">
@@ -66,7 +64,7 @@
                         <h4>bodybuilding.com</h4>
                     </a>
                 </div>
-                <div class="col col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <a href="/work/metageek.html">
                         <div class="mask">
                             <img src="/images/projects/metageek/metageek_thumb.jpg">
@@ -74,7 +72,7 @@
                         <h4>metageek.com</h4>
                     </a>
                 </div>
-                <div class="col col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <a href="/work/gigmob.html">
                         <div class="mask">
                             <img src="/images/projects/gigmob/gigmob_thumb.jpg">
@@ -82,7 +80,7 @@
                         <h4>gigmob</h4>
                     </a>
                 </div>
-                <div class="col col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <a href="/work/idearoom.html">
                         <div class="mask">
                             <img src="/images/projects/idearoom/idearoom_thumb.jpg">
@@ -90,7 +88,7 @@
                         <h4>idearoom</h4>
                     </a>
                 </div>
-                <div class="col col-sm-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <a href="/work/tvcc.html">
                         <div class="mask">
                             <img src="/images/projects/tvcc/tvcc_thumb.jpg">
