Fixed links in footer

--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -20,8 +20,6 @@
     <title>Chad Harbig | Bodybuilding.com</title>
 
     <script>
-
-
     </script>
 
     <style>
@@ -46,7 +44,6 @@
                 margin-left: 20px;
             }
         }
-
     </style>
 </head>
 
@@ -161,11 +158,11 @@
                 </div>
 -->
             </div>
-            <a href="/work/gigmob.html">
+            <a href="/work/metageek.html">
                 <div class="row next justify-content-center">
                     <div class="col-sm-">
                         <p>Next Case Study</p>
-                        <h3>A night of possibilities at your fingertips <i class="far fa-arrow-right"></i></h3>
+                        <h3>A Facelift for MetaGeek.com <i class="far fa-arrow-right"></i></h3>
                     </div>
                 </div>
             </a>
