--- a/work/metageek.html
+++ b/work/metageek.html
@@ -158,11 +158,11 @@
                 </div>
 -->
             </div>
-            <a href="/work/idearoom.html">
+            <a href="/work/gigmob.html">
                 <div class="row next justify-content-center">
                     <div class="col-sm-">
                         <p>Next Case Study</p>
-                        <h3>A Better Way To Work With Wood<i class="far fa-arrow-right"></i></h3>
+                        <h3>A Night of Possibilites at Your Fingertips <i class="far fa-arrow-right"></i></h3>
                     </div>
                 </div>
             </a>
