--- a/work/gigmob.html
+++ b/work/gigmob.html
@@ -20,8 +20,6 @@
     <title>Chad Harbig | GigMob</title>
 
     <script>
-
-
     </script>
 
     <style>
@@ -49,7 +47,6 @@
                 margin-left: 20px;
             }
         }
-
     </style>
 </head>
 
@@ -136,11 +133,11 @@
                 </div>
 -->
             </div>
-            <a href="/work/metageek.html">
+            <a href="/work/idearoom.html">
                 <div class="row next justify-content-center">
                     <div class="col-sm-">
                         <p>Next Case Study</p>
-                        <h3>A New Ecommerce Experience For MetaGeek <i class="far fa-arrow-right"></i></h3>
+                        <h3>A Better Way to Work with Wood <i class="far fa-arrow-right"></i></h3>
                     </div>
                 </div>
             </a>
