Updated services descriptions
- Updated descriptions of services
- Removed anchored nav

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="refresh" content="0; URL='http://www.chadharbig.com/work.html'" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -20,8 +19,15 @@
 
     <title>Chad Harbig | Product Consultant | UX Architect</title>
     <style>
+        .quote {
+            margin: 140px auto 80px;
+        }
 
-
+        .next:hover {
+            background-color: #0B80FB;
+            transition-timing-function: ease-in;
+            transition-duration: .1s;
+        }
     </style>
 </head>
 
@@ -29,7 +35,7 @@
     <div class="container-fluid background">
         <div class="container-fluid wrapper">
 
-            <div class="row topnav fixed-top">
+            <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
                     <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
                 </div>
@@ -37,129 +43,60 @@
                     <div class="nav-links">
                         <a href="/work.html">Work</a>
                         <a href="/files/CH_Resume.pdf">Resume</a>
-                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
+                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
-            </div>
-
-            <div class="jumbotron" id="bbcom_main">
-                <!-- <h1>Hello, world!</h1> -->
             </div>
 
             <div class="container">
+                <div class="row headline">
+                    <div class="col-sm-12 justify-content-md-center text-center">
+                        <h1 class="text-center">Let's work together to deliver your next product innovation</h1>
+                        <p>Whether you're a scrappy startup trying to validate your amazing product idea,<br> or an established company that wants to stay relevent in a changing market, <br><strong>I've got the skills and expertise to help you accomplish your goals.</strong></p>
+                    </div>
+                </div>
                 <div class="row services justify-content-md-center text-center">
-                    <div class="col-sm-12">
-                        <h2 class="text-center">A few ways I can help you deliver your<br> next innovation</h2>
-                    </div>
-                    <div class="col-sm-4">
-                        <img src="/images/icons/leader.png">
-                        <h5>Product Strategy</h5>
-                        <p></p>
-                    </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <img src="/images/icons/architecture.png">
                         <h5>Team Leadership</h5>
+                        <p>Cross-functional team leadership is my specialty.<br>I will help you set objectives and KPIs for your internal and external product resources, and lead them to deliver exceptional results on-time and on-budget.</p>
                     </div>
-                    <div class="col-sm-4">
-                        <img src="/images/icons/strategy.png">
-                        <h5>Experience Design</h5>
-                    </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <img src="/images/icons/architecture.png">
-                        <h5>Ecommerce Design</h5>
+                        <h5>Product Management</h5>
+                        <p>Have a product idea, but don’t know how to make it a reality?<br>I will work with you to set a product vision and strategy, and translate that vision into a Lean product roadmap that delivers real value for your customers and your business.</p>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
+                        <img src="/images/icons/architecture.png">
+                        <h5>Experience Design</h5>
+                        <p>fdsfdsfdfsdfsdafjl;sdajf;</p>
+                    </div>
+                    <div class="col-sm-6">
                         <img src="/images/icons/leader.png">
                         <h5>Product Research</h5>
-                        <p></p>
+                        <p>If your product doesn’t solve a real problem, it is likely to fall flat.<br>I can help you identify the top pain-points that your customers will pay to solve, or validate the desirability, viability, and feasibility of your existing product idea.</p>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-6">
                         <img src="/images/icons/strategy.png">
                         <h5>Info Architecture</h5>
+                        <p>Odds are, your product is more complicated than it needs to be. I can evaluate the architecture of your existing website, app, or desktop software, and optimize the flow of information to make it easier for users to accomplish their goals.</p>
                     </div>
-                </div>
-                <div class="row topnav fixed-top">
-                    <div class="col-sm-12 col-md-4">
-                        <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
+                    <div class="col-sm-6">
+                        <img src="/images/icons/strategy.png">
+                        <h5>UX Training</h5>
+                        <p>Want to level-up your current product resources?<br>I can train your team on all aspects of user experience; from ideation through research, experience mapping, UX design, prototyping, usability testing, and product delivery.</p>
                     </div>
-                    <div class="col-sm-12 col-md-8">
-                        <div class="nav-links">
-                            <a href="/work.html">Work</a>
-                            <a href="/files/CH_Resume.pdf">Resume</a>
-                            <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row frame quote justify-content-center">
                     <div class="col-sm-12">
-                        <p>“Our techs religously use inSSIDer to ensure that customers are left with the best experience possible.”<br>
-                        </p>
-                        <h5>- Gary M., Sr. Director of Technical Operations
-                        </h5>
+                        <div class="separator"></div>
                     </div>
-                </div>
-                <div class="row gallery justify-content-sm-center text-center">
-                    <div class="col col-sm-12">
-                        <h2>Sample Projects</h2>
-                        <p>This is an awesome description</p>
-                    </div>
-                    <div class="col col-xs-12 col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/inssider.html">
-                            <img src="/images/projects/inssider/inssider_thumb.jpg">
-                            <h5>inssider tech</h5>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/bodybuilding.html">
-                            <img src="/images/projects/bbcom/bbcom_thumb.jpg">
-                            <h5>bodybuilding.com</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/gigmob.html">
-                            <img src="/images/projects/gigmob/gigmob_thumb.jpg">
-                            <h5>gigmob</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/metageek.html">
-                            <img src="/images/projects/metageek/metageek_thumb.jpg">
-                            <h5>metageek.com</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/idearoom.html">
-                            <img src="/images/projects/idearoom/idearoom_thumb.jpg">
-                            <h5>idearoom</h5>
-                                    </a>
-                        </div>
-                    </div>
-                    <div class="col col-sm-6 col-md-4">
-                        <div class="mask"><a href="/work/tvcc.html">
-                            <img src="/images/projects/tvcc/tvcc_thumb.jpg">
-                            <h5>tvcc</h5>
-                                    </a>
+                    <div class="row">
+                        <div class="col-sm-12 text-center">
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row frame quote justify-content-center">
-                <div class="col-sm-12">
-                    <p>“Our techs religously use inSSIDer to ensure that customers are left with the best experience possible.”<br>
-                    </p>
-                    <h5>- Gary M., Sr. Director of Technical Operations
-                    </h5>
-                </div>
-            </div>
-            <div class="footer">
             </div>
         </div>
     </div>
-
     <!-- Bootstrap JQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <!-- Popper.js -->
