--- a/work/bodybuilding.html
+++ b/work/bodybuilding.html
@@ -162,7 +162,7 @@
                 <div class="row next justify-content-center">
                     <div class="col-sm-">
                         <p>Next Case Study</p>
-                        <h3>A Facelift for MetaGeek.com <i class="far fa-arrow-right"></i></h3>
+                        <h3>An Ecommerce Makeover for MetaGeek <i class="far fa-arrow-right"></i></h3>
                     </div>
                 </div>
             </a>
