--- a/work/gigmob.html
+++ b/work/gigmob.html
@@ -52,7 +52,7 @@
 
 <body>
     <div class="container-fluid background">
-        <div class="container-fluid wrapper">
+        <div class="container wrapper">
 
             <div class="row topnav fixed-top">
                 <div class="col-sm-12 col-md-4">
@@ -76,13 +76,13 @@
             <div class="row summary">
                 <div class="col-sm-12 col-md-7 col-lg-8">
                     <h4>Background</h4>
-                    <p>GigMob was conceptualized during participation in B|Launched, a competition in which eight teams vie for initial seed funding to develop an innovative product idea. GigMob was one of two concepts to receive funding.
-                    </p>
                     <p>
                         Gigmob is a mobile ticketing and event management solution for small concert venues with limited resources. Gigmob makes it easy for concert-goers to find events in their area, browse information about these events, purchase tickets, and redeem tickets at the door within one elegant mobile application. GigMob is about easy access, both to event information and the event itself. No more cash-only purchases. No more missing your favorite artist. No more empty shows.
                     </p>
                     <p>
                         On the back-end, GigMob combines a sophisticated event ticketing system with up-to-date marketing and promotion tools that allow small entertainment venues to dramatically increase ticket sales through highly targeted event notifications. Anonymous data about buying trends is gathered for analysis by venues and artists, to assist them in making sound decisions when booking future events.
+                    </p>
+                    <p>GigMob was submitted for participation in B|Launched, a competition in which eight teams vie for initial seed funding to develop an innovative product idea. GigMob was one of only two concepts to receive funding.
                     </p>
                 </div>
                 <div class="d-none d-md-block col-md-4 offset-md-1 col-lg-3 outcomes">
