--- a/work/metageek.html
+++ b/work/metageek.html
@@ -20,8 +20,6 @@
     <title>Chad Harbig | MetaGeek.com</title>
 
     <script>
-
-
     </script>
 
     <style>
@@ -49,7 +47,6 @@
                 margin-left: 20px;
             }
         }
-
     </style>
 </head>
 
@@ -101,7 +98,7 @@
                     <h5>Funnel Analysis</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>-</p>
+                    <p>Existing sales funnels were analyzed to identify bottlenecks in the experience and opportunities. In addition, the overall flow was evaluated against the Awareness Ladder model for conversion optimization, which accounts for a visitor’s knowledge of your business, and compels them to convert by offering them a solution or service to a specific problem that they need to solve. </p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/metageek/metageek_analysis.jpg">
@@ -111,7 +108,7 @@
                     <h5>Style Guide</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>-</p>
+                    <p>At the start of the website redesign, I identified the need for consistent UI standards. A live style guide was built to enable teams without dedicated design resources to test content and iterate more quickly, while maintaining consistency across the site.</p>
                 </div>
                 <div class="col-sm-12 col-md-8 offset-md-2">
                     <img class="img-responsive" src="/images/projects/metageek/metageek_styleguide.jpg">
@@ -121,7 +118,8 @@
                     <h5>Responsive Design</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>-</p>
+                    <p>MetaGeek.com was built using the responsive Bootstrap framework to provide a great experience at various screen resolutions.
+                    </p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/metageek/metageek_responsive.jpg">
@@ -131,7 +129,8 @@
                     <h5>Points-of-Sale</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>-</p>
+                    <p>-MetaGeek’s ecommerce experience was designed to support multiple points-of-sale. A streamlined sales funnel makes it easy for B2C customers to purchase directly from the website, while distributors and resellers can configure bulk orders from a simple online catalog. For customers who have questions about product selection or special pricing, access to sales support is always a click away.
+                    </p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/metageek/metageek_purchase.jpg">
@@ -141,7 +140,7 @@
                     <h5>Shopify Cart Experience</h5>
                 </div>
                 <div class="col-lg-9">
-                    <p>The site redesign included deployment of a new Shopify cart experience. In addition to design and implementation of the cart, I was responsible for I worked closely with MetaGeek's Operations team and outside </p>
+                    <p>The website redesign included design and deployment of a new Shopify cart experience. Branded styling was used to match the look-and-feel of the main site. Shopify apps were utilized to handle inventory, license management, and fulfillment, without the need for custom-coded solutions.</p>
                 </div>
                 <div class="col-sm-12">
                     <img class="img-responsive" src="/images/projects/metageek/metageek_cart.jpg">
