--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
 <body>
     <div class="container-fluid background">
         <div class="container-fluid wrapper">
-            <div class="row topnav fixed-top">
+            <div class="row topnav">
                 <div class="col-sm-12 col-md-4">
                     <h3><a href="/" style="margin: 0;">Chad Harbig</a></h3>
                 </div>
@@ -36,7 +36,7 @@
                     <div class="nav-links">
                         <a href="/work.html">Work</a>
                         <a href="/files/CH_Resume.pdf">Resume</a>
-                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-secondary">Let's Chat!</button></a>
+                        <a href="mailto:chad.harbig@gmail.com?"><button type="button" class="btn btn-small">Let's Chat!</button></a>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,13 @@
                     </a>
                 </div>
             </div>
-
+            <a href="mailto:chad.harbig@gmail.com?">
+                <div class="row footer justify-content-center">
+                    <div class="col-sm-">
+                        <h3>Get in Touch</h3>
+                    </div>
+                </div>
+            </a>
         </div>
 
     </div>
